third_party/move/move-compiler-v2/tests/more-v1/parser/global_access.exp

Diagnostics:
error: unexpected token
   ┌─ tests/more-v1/parser/global_access.move:13:24
   │
13 │         let _ : bool = ::exists<Self::R>(0x0);
   │                        ^^
   │                        │
   │                        Unexpected '::'
   │                        Expected an expression term
